# Nova-Network

./: .dockerignore  .env  .env.live  .env.new  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  NODE_OPERATOR.md  ONBOARDING_GUIDE.md  README.md  SOCIAL_KIT.md  app_hub_ui.html  auth.py  claude_agent_wallet.json  cli.py  community_ui.html  demo_rwa.py  docker-compose.live.yml  docker-compose.yml  dual_chain.py  evm_gateway.py  explorer_ui.html  jito_sdk.py  node.py  onboarding_ui.html  passport_ui.html  pyproject.toml  requirements.txt  run_tests.sh  rwa_market_ui.html  rwa_ui.html  scanner_ui.html  seed_agents.py  seed_demo.py  setup.py  start_ui.html  test_claude_agent.py  threatintel_wallet.json  (+2 more)
assets/: ui-refresh.css
docker/: gateway_entrypoint.sh  node_entrypoint.sh
docs/: AI_NATIVE_GAMEPLAN.md  BIG_BLOCKCHAIN_EXECUTION_PLAN.md  CHAINLIST_GO_LIVE.md  EVM_COMPATIBILITY_ROADMAP.md  MAINNET_HARDENING_RUNBOOK.md  PERFORMANCE_RUNBOOK.md  PLATFORM_EXECUTION_PLAN.md  PRIVATE_CHAIN_OPERATING_MODEL.md  TOKEN_PRICING_BOOTSTRAP.md
jito_agent/: README.md  __init__.py  agent.py  callbacks.py  cli.py  client.py  crypto.py  discovery.py  evidence.py  light_client.py  policy.py  queue.py  runtime.py  self_description.py  session.py  tracker.py  types.py  wallet.py
jito_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
jito_agent_js/: README.md  package.json
node_data_jito/: private_chain.json  public_chain.json
node_data_tmp/: private_chain.json  public_chain.json
scripts/: backup_state.sh  e2e_full_stack.sh  health_probe.sh  (+5 more)
(+46 files in other folders)
